--- a/package.json
+++ b/package.json
@@ -31,21 +31,21 @@
   "homepage": "https://github.com/roblox-aurora/rbx-net#readme",
   "types": "out/index.d.ts",
   "devDependencies": {
-    "@rbxts/compiler-types": "^1.3.3-types.1",
+    "@rbxts/compiler-types": "^2.0.4-types.1",
     "@rbxts/t": "^1.3.5",
     "@rbxts/types": "^1.0.651",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-roblox-ts": "0.0.24",
-    "prettier": "^2.2.1",
-    "rbxts-transform-debug": "1.0.0-ts4.5",
-    "rbxts-transform-env": "1.0.0-ts4.5",
-    "roblox-ts": "^1.3.3",
-    "typescript": "^4.5.4"
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-roblox-ts": "0.0.35",
+    "prettier": "^2.8.1",
+    "rbxts-transform-debug": "~2.0.3",
+    "rbxts-transform-env": "~2.0.4",
+    "roblox-ts": "~2.0.4",
+    "typescript": "~4.8.4"
   }
 }
