--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,17 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
 
       - name: Install NPM dependencies
         uses: bahmutov/npm-install@v1.4.5
