Start rewriting some internals

--- a/example/default.project.json
+++ b/example/default.project.json
@@ -1,5 +1,5 @@
 {
-    "name": "zirconium-test",
+    "name": "net-test",
     "tree": {
         "$className": "DataModel",
         "ServerScriptService": {
