--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -8,6 +8,7 @@
         "module": "CommonJS",
         "target": "ESNext",
         "moduleResolution": "Node",
+        "moduleDetection": "force",
         "typeRoots": [
             "../node_modules/@rbxts"
         ],
