--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build:dev": "cross-env NODE_ENV=development rbxtsc --verbose",
     "watch:dev": "cross-env NODE_ENV=development rbxtsc -w --verbose",
     "build:rbxmx": "npm run build:luau && rojo build luau/build.project.json -o luau.net.rbxmx",
-    "build:example": "cross-env NODE_ENV=development rbxtsc-dev --type=game -p ./example -i ./include",
-    "watch:example": "cross-env NODE_ENV=development TYPE=TestTS rbxtsc-dev -w --type=game -p ./example -i ./include",
+    "build:example": "cross-env NODE_ENV=development rbxtsc --type=game -p ./example -i ./include",
+    "watch:example": "cross-env NODE_ENV=development TYPE=TestTS rbxtsc -w --type=game -p ./example -i ./include",
     "serve:example": "rojo serve ./example/default.project.json --port 34567",
     "dev:example": "concurrently npm:watch:example npm:serve:example"
   },
@@ -31,9 +31,9 @@
   "homepage": "https://github.com/roblox-aurora/rbx-net#readme",
   "types": "out/index.d.ts",
   "devDependencies": {
-    "@rbxts/compiler-types": "^1.3.3-types.1",
+    "@rbxts/compiler-types": "^2.0.3-types.0",
     "@rbxts/t": "^1.3.5",
-    "@rbxts/types": "^1.0.651",
+    "@rbxts/types": "^1.0.684",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "concurrently": "^6.0.0",
@@ -41,11 +41,11 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-roblox-ts": "0.0.24",
+    "eslint-plugin-roblox-ts": "0.0.35",
     "prettier": "^2.2.1",
-    "rbxts-transform-debug": "1.0.0-ts4.5",
-    "rbxts-transform-env": "1.0.0-ts4.5",
-    "roblox-ts": "^1.3.3",
-    "typescript": "^4.5.4"
+    "rbxts-transform-debug": "~2.0.3",
+    "rbxts-transform-env": "~2.0.4",
+    "roblox-ts": "~2.0.3",
+    "typescript": "~4.8.3"
   }
 }
