--- a/foreman.toml
+++ b/foreman.toml
@@ -1,3 +1,4 @@
 [tools]
 rojo = { source = "rojo-rbx/rojo", version = "=7.0.0-rc.1" }
 wally = { source = "UpliftGames/wally", version = "=0.3.0" }
+lune = { github = "filiptibell/lune", version = "=0.7.7" }
