--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/net",
-  "version": "3.0.7",
+  "version": "4.0.0-indev.0",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -31,21 +31,21 @@
   "homepage": "https://github.com/roblox-aurora/rbx-net#readme",
   "types": "out/index.d.ts",
   "devDependencies": {
-    "@rbxts/compiler-types": "^1.3.3-types.1",
+    "@rbxts/compiler-types": "^2.2.0-types.0",
     "@rbxts/t": "^1.3.5",
-    "@rbxts/types": "^1.0.471",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
+    "@rbxts/types": "^1.0.718",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-roblox-ts": "0.0.24",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-roblox-ts": "0.0.36",
     "prettier": "^2.2.1",
-    "rbxts-transform-debug": "1.0.0-ts4.5",
-    "rbxts-transform-env": "1.0.0-ts4.5",
-    "roblox-ts": "^1.3.3",
-    "typescript": "^4.5.4"
+    "rbxts-transform-debug": "~2.2.0",
+    "rbxts-transform-env": "~2.2.0",
+    "roblox-ts": "^2.2.0",
+    "typescript": "~5.2.2"
   }
 }
